--- a/package.json
+++ b/package.json
@@ -41,17 +41,20 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
-    "ts-jest": "^29.1.0",
     "@types/jest": "^29.5.0",
-    "tslint": "^5.20.1",
-    "danger": "*",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "danger": "*",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint": "^8.31.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
     "semantic-release": "^21.0.1",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.3",
     "validate-commit-msg": "^2.12.1"
   },
