--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
     "docs": "esdoc -c .esdoc.json",
     "prepublish": "npm run build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "prettier": "prettier",
-    "prettier-write": "npm run prettier -- --parser typescript --no-semi --trailing-comma es5 --write --print-width 120",
-    "prettier-project": "npm run prettier-write -- 'src/**/*.{ts,tsx}'",
+    "prettier": "prettier --write ./src",
+    "lint:fix": "eslint --fix src",
     "lint": "tslint \"src/**/*.ts\""
   },
   "license": "MIT",
