--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,10 @@
 {
-    "prettier.singleQuote": false,
-    "prettier.trailingComma": "es5",
-    "prettier.semi": false,
-    "prettier.printWidth": 120,
-    "files.exclude": {
-        "**/.git": true,
-        "**/dist": true,
-        "**/node_modules": true
-    }
+  "prettier.singleQuote": false,
+  "prettier.trailingComma": "es5",
+  "prettier.semi": false,
+  "prettier.printWidth": 120,
+  "files.exclude": {
+    "**/.git": true,
+    "**/dist": true
+  }
 }
