--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "test": "jest",
     "predocs": "rm -rf docs/",
     "docs": "esdoc -c .esdoc.json",
-    "prepublish": "npm run build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "prettier": "prettier --write ./src",
     "lint:fix": "eslint --fix src",
@@ -41,13 +40,14 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "danger": "*",
-    "eslint-config-prettier": "^8.6.0",
     "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
@@ -86,5 +86,8 @@
       "\\.snap$",
       "<rootDir>/node_modules/"
     ]
+  },
+  "dependencies": {
+    "@ysk8hori/typescript-graph": "^0.7.3-0"
   }
 }
