--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "prettier": "prettier --write ./src",
     "lint:fix": "eslint --fix src",
-    "lint": "tslint \"src/**/*.ts\""
+    "lint": "eslint \"src/**/*.ts\""
   },
   "license": "MIT",
   "engines": {
@@ -67,8 +67,8 @@
   },
   "lint-staged": {
     "*.@(ts|tsx)": [
-      "tslint --fix",
-      "npm run prettier-write --",
+      "eslint --fix",
+      "npm run prettier --",
       "git add"
     ]
   },
