--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "jest",
     "predocs": "rm -rf docs/",
     "docs": "esdoc -c .esdoc.json",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "semantic-release": "semantic-release",
     "prettier": "prettier --write ./src",
     "lint:fix": "eslint --fix src",
     "lint": "eslint \"src/**/*.ts\"",
