chore(package.json): add release branches

--- a/package.json
+++ b/package.json
@@ -90,5 +90,10 @@
   },
   "dependencies": {
     "@ysk8hori/typescript-graph": "^0.7.3"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
   }
 }
