--- a/.github/workflows/testAndDanger.yml
+++ b/.github/workflows/testAndDanger.yml
@@ -41,3 +41,4 @@ jobs:
         run: npx danger ci
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
+          DEBUG: true
