ci(maxsize): 最大値を36（表示される想定の最大値）とする

--- a/.github/workflows/testAndDanger.yml
+++ b/.github/workflows/testAndDanger.yml
@@ -42,3 +42,4 @@ jobs:
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
           DEBUG: true
+          TSG_MAX_SIZE: 36
