--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     ]
   },
   "dependencies": {
-    "@ysk8hori/typescript-graph": "^0.7.5"
+    "@ysk8hori/typescript-graph": "^0.7.5",
+    "remeda": "^1.12.0"
   },
   "release": {
     "branches": [
