--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.4.2",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
