feat(config): 環境変数 DEBUG の名前の変更と取得関数の作成

--- a/.github/workflows/testAndDanger.yml
+++ b/.github/workflows/testAndDanger.yml
@@ -41,4 +41,4 @@ jobs:
         run: npx danger ci
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
-          DEBUG: true
+          TSG_DEBUG: true
