--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
   },
   "dependencies": {
     "@ysk8hori/typescript-graph": "^0.8.1",
-    "remeda": "^1.12.0"
+    "remeda": "^1.12.0",
+    "zod": "3.21.4"
   },
   "release": {
     "branches": [
