--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,27 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
+  "baseBranches": ["develop"],
+  "timezone": "Asia/Tokyo",
+  "schedule": ["after 5pm and before 10pm"],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["major", "minor"],
+      "labels": ["TypeScript"],
+      "matchPackageNames": ["typescript"],
+      "groupName": "TypeScript"
+    },
+    {
+      "groupName": "ESLint related packages",
+      "packageNames": ["eslint", "eslint-config-prettier"],
+      "packagePatterns": ["^@typescript-eslint/", "^eslint-plugin"]
+    },
+    {
+      "groupName": "All minore and patch dependencies",
+      "matchUpdateTypes": ["minor", "patch"],
+      "labels": ["UPDATE-MINOR&PATCH"],
+      "excludePackageNames": ["typescript", "eslint", "eslint-config-prettier"],
+      "excludePackagePatterns": ["^@typescript-eslint/", "^eslint-plugin"]
+    }
+  ],
   "automerge": true
 }
