chore(deps): tsg 最新化

--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     ]
   },
   "dependencies": {
-    "@ysk8hori/typescript-graph": "^0.8.1",
+    "@ysk8hori/typescript-graph": "0.11.4",
     "remeda": "^1.12.0",
     "zod": "3.21.4"
   },
