--- a/.danger-tsgrc.json
+++ b/.danger-tsgrc.json
@@ -1,5 +1,5 @@
 {
   "maxSize": 100,
   "debug": true,
-  "exclude": ["node_modules", ".test.ts", ".spec.ts", ".d.ts"]
+  "exclude": ["node_modules", ".test.ts", ".spec.ts", ".d.ts", "/utils"]
 }
