--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": ["config:base"],
-  "baseBranches": ["develop"],
+  "baseBranches": ["main"],
   "timezone": "Asia/Tokyo",
   "schedule": ["after 5pm and before 10pm"],
   "packageRules": [
