chore(config): includeIndexFileDependencies を true とする

--- a/.danger-tsgrc.json
+++ b/.danger-tsgrc.json
@@ -1,5 +1,6 @@
 {
   "maxSize": 100,
   "debug": true,
-  "exclude": ["node_modules", ".test.ts", ".spec.ts", ".d.ts", "/utils"]
+  "exclude": ["node_modules", ".test.ts", ".spec.ts", ".d.ts", "/utils"],
+  "includeIndexFileDependencies": true
 }
